Phase 9: rest api + dto/mapper + error handling + cursor pagination
Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>